# py-mat-mul

./: CMakeLists.txt  README.md  generate_tests_config.cmake  main.ipynb  matrix_lib.cpp  matrix_lib.h  matrix_py_lib.cpp  matrix_py_lib.h
matrix/: CMakeLists.txt
matrix/include/: matrix.h
matrix/memory_processing/: CMakeLists.txt
matrix/memory_processing/include/: memory-processing.h
matrix/memory_processing/src/: memory-processing.cpp  memory-processing.cu
matrix/src/: matrix.cpp  matrix.cu
src/: matrix_lib.cpp  matrix_py_lib.cpp
src/matrix/src/: matrix.cpp
tests/: perfomance.py  test_config.py.in  test_invalid_args.py
